--- a/www/cart-1.html
+++ b/www/cart-1.html
@@ -43,7 +43,7 @@
 			<div class="header-search-col">
 				<div class="header-phones">8(4212)40-82-02, 8-924-21-1118</div>
 				<form action="" method="POST" class="header-search animated-placeholder">
-					<input type="text" name="header-seach" id="input-search" placeholder="Поиск..." required />
+					<input class="animated-placeholder" type="text" name="header-seach" id="input-search" placeholder="Поиск..." required />
 					<label for="input-search"></label>
 					<input type="submit" value="" />
 				</form>
@@ -270,8 +270,8 @@
 			<div>Подтверждение</div>
 		</div>
 	</div>
-	<div class="row">
-		<form class="col-xs-12">
+	<form id="order-step1" action="" method="POST" class="row animated-placeholder">
+		<div class="col-xs-12">
 			<table>
 				<thead>
 					<tr>
@@ -306,10 +306,27 @@
 						<td>3593.37</td>
 						<td>
 							<div class="special-price">3597.37</div>
-							<div class="old-price">3597.37</div>
+							<div class="old-price">3597.37 <span>руб</span></div>
 						</td>
 						<td>
-							<a href="#" class="trash"></a>
+							<a href="#" class="trash">
+								<svg version="1.1" id="trash-ico" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="328.48px" height="392px" viewBox="0 0 328.48 392" enable-background="new 0 0 328.48 392" xml:space="preserve">
+								<g>
+									<path fill="#54545A" d="M320.16,50h-94.719V8.32c0-4.64-3.762-8.32-8.32-8.32H111.359c-4.64,0-8.32,3.762-8.32,8.32V50H8.32
+										C3.68,50,0,53.762,0,58.32v51.918c0,4.641,3.762,8.321,8.32,8.321H28V330.32c0,34,27.68,61.68,61.68,61.68h149.121
+										c34,0,61.68-27.68,61.68-61.68V118.641h19.68c4.641,0,8.32-3.762,8.32-8.321v-52C328.48,53.762,324.719,50,320.16,50L320.16,50z
+										 M119.762,16.719h89.039v33.359h-89.039V16.719z M283.762,330.32c0,24.801-20.16,44.961-44.961,44.961H89.68
+										c-24.801,0-44.961-20.16-44.961-44.961V118.641h239.043V330.32z M311.762,101.922H16.719V66.719H311.84v35.203H311.762z
+										 M311.762,101.922"/>
+									<path fill="#54545A" d="M90.719,332.801c4.64,0,8.32-3.762,8.32-8.32V169.52c0-4.641-3.758-8.321-8.32-8.321
+										c-4.641,0-8.321,3.762-8.321,8.321v154.96C82.398,329.039,86.16,332.801,90.719,332.801L90.719,332.801z M90.719,332.801"/>
+									<path fill="#54545A" d="M164.238,332.801c4.641,0,8.321-3.762,8.321-8.32V169.52c0-4.641-3.758-8.321-8.321-8.321
+										c-4.558,0-8.316,3.762-8.316,8.321v154.96C155.922,329.039,159.602,332.801,164.238,332.801L164.238,332.801z M164.238,332.801"/>
+									<path fill="#54545A" d="M237.762,332.801c4.637,0,8.316-3.762,8.316-8.32V169.52c0-4.641-3.758-8.321-8.316-8.321
+										c-4.641,0-8.32,3.762-8.32,8.321v154.96C229.359,329.039,233.121,332.801,237.762,332.801L237.762,332.801z M237.762,332.801"/>
+								</g>
+								</svg>
+							</a>
 						</td>
 					</tr>
 					<tr>
@@ -332,10 +349,27 @@
 						<td>3593.37</td>
 						<td>
 							<div class="special-price">3597.37</div>
-							<div class="old-price">3597.37</div>
+							<div class="old-price">3597.37 <span>руб</span></div>
 						</td>
 						<td>
-							<a href="#" class="trash"></a>
+							<a href="#" class="trash">
+								<svg version="1.1" id="trash-ico" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="328.48px" height="392px" viewBox="0 0 328.48 392" enable-background="new 0 0 328.48 392" xml:space="preserve">
+								<g>
+									<path fill="#54545A" d="M320.16,50h-94.719V8.32c0-4.64-3.762-8.32-8.32-8.32H111.359c-4.64,0-8.32,3.762-8.32,8.32V50H8.32
+										C3.68,50,0,53.762,0,58.32v51.918c0,4.641,3.762,8.321,8.32,8.321H28V330.32c0,34,27.68,61.68,61.68,61.68h149.121
+										c34,0,61.68-27.68,61.68-61.68V118.641h19.68c4.641,0,8.32-3.762,8.32-8.321v-52C328.48,53.762,324.719,50,320.16,50L320.16,50z
+										 M119.762,16.719h89.039v33.359h-89.039V16.719z M283.762,330.32c0,24.801-20.16,44.961-44.961,44.961H89.68
+										c-24.801,0-44.961-20.16-44.961-44.961V118.641h239.043V330.32z M311.762,101.922H16.719V66.719H311.84v35.203H311.762z
+										 M311.762,101.922"/>
+									<path fill="#54545A" d="M90.719,332.801c4.64,0,8.32-3.762,8.32-8.32V169.52c0-4.641-3.758-8.321-8.32-8.321
+										c-4.641,0-8.321,3.762-8.321,8.321v154.96C82.398,329.039,86.16,332.801,90.719,332.801L90.719,332.801z M90.719,332.801"/>
+									<path fill="#54545A" d="M164.238,332.801c4.641,0,8.321-3.762,8.321-8.32V169.52c0-4.641-3.758-8.321-8.321-8.321
+										c-4.558,0-8.316,3.762-8.316,8.321v154.96C155.922,329.039,159.602,332.801,164.238,332.801L164.238,332.801z M164.238,332.801"/>
+									<path fill="#54545A" d="M237.762,332.801c4.637,0,8.316-3.762,8.316-8.32V169.52c0-4.641-3.758-8.321-8.316-8.321
+										c-4.641,0-8.32,3.762-8.32,8.321v154.96C229.359,329.039,233.121,332.801,237.762,332.801L237.762,332.801z M237.762,332.801"/>
+								</g>
+								</svg>
+							</a>
 						</td>
 					</tr>
 					<tr>
@@ -358,15 +392,123 @@
 						<td>3593.37</td>
 						<td>
 							<div class="special-price">3597.37</div>
-							<div class="old-price">3597.37</div>
+							<div class="old-price">3597.37 <span>руб</span></div>
 						</td>
 						<td>
-							<a href="#" class="trash"></a>
+							<a href="#" class="trash">
+								<svg version="1.1" id="trash-ico" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="328.48px" height="392px" viewBox="0 0 328.48 392" enable-background="new 0 0 328.48 392" xml:space="preserve">
+								<g>
+									<path fill="#54545A" d="M320.16,50h-94.719V8.32c0-4.64-3.762-8.32-8.32-8.32H111.359c-4.64,0-8.32,3.762-8.32,8.32V50H8.32
+										C3.68,50,0,53.762,0,58.32v51.918c0,4.641,3.762,8.321,8.32,8.321H28V330.32c0,34,27.68,61.68,61.68,61.68h149.121
+										c34,0,61.68-27.68,61.68-61.68V118.641h19.68c4.641,0,8.32-3.762,8.32-8.321v-52C328.48,53.762,324.719,50,320.16,50L320.16,50z
+										 M119.762,16.719h89.039v33.359h-89.039V16.719z M283.762,330.32c0,24.801-20.16,44.961-44.961,44.961H89.68
+										c-24.801,0-44.961-20.16-44.961-44.961V118.641h239.043V330.32z M311.762,101.922H16.719V66.719H311.84v35.203H311.762z
+										 M311.762,101.922"/>
+									<path fill="#54545A" d="M90.719,332.801c4.64,0,8.32-3.762,8.32-8.32V169.52c0-4.641-3.758-8.321-8.32-8.321
+										c-4.641,0-8.321,3.762-8.321,8.321v154.96C82.398,329.039,86.16,332.801,90.719,332.801L90.719,332.801z M90.719,332.801"/>
+									<path fill="#54545A" d="M164.238,332.801c4.641,0,8.321-3.762,8.321-8.32V169.52c0-4.641-3.758-8.321-8.321-8.321
+										c-4.558,0-8.316,3.762-8.316,8.321v154.96C155.922,329.039,159.602,332.801,164.238,332.801L164.238,332.801z M164.238,332.801"/>
+									<path fill="#54545A" d="M237.762,332.801c4.637,0,8.316-3.762,8.316-8.32V169.52c0-4.641-3.758-8.321-8.316-8.321
+										c-4.641,0-8.32,3.762-8.32,8.321v154.96C229.359,329.039,233.121,332.801,237.762,332.801L237.762,332.801z M237.762,332.801"/>
+								</g>
+								</svg>
+							</a>
 						</td>
 					</tr>
 				</tbody>
 			</table>
-		</form>
+		</div>
+		<div class="col-xs-12 vertical-line"></div>
+		<div class="col-xs-6 coupon">
+			<input class="animated-placeholder" type="text" id="coupon" placeholder="Ввести купон на скидку" />
+			<label for="coupon"></label>
+			<input type="button" value="Применить купон" />
+			<div class="coupon-wrong">Вы ввели неверный номер</div>
+			<div class="coupon-success">Спасибо! Купон успешно применен</div>
+		</div>
+		<div class="col-xs-3"></div>
+		<div class="col-xs-3">
+			<div class="summ">Общая сумма заказа  15600 р.</div>
+			<div class="summ2">Сумма со скидкой <span>14200 р.</span></div>
+			<input type="submit" value="Оформить заказ">
+		</div>
+	</form>
+	<div class="row">
+		<div class="col-xs-12 heading"><span>Товары, которые Вы недавно смотрели</span></div>
+	</div>
+	<div class="row goods recent-view">
+		<div class="col-xs-2">
+			<div class="item">
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
+				<a href="product.html">
+					<div class="title">Инициатик - средства против первых морщин</div>
+					<div class="price">
+						<div>3593.37 <span>руб</span></div>
+					</div>
+				</a>
+				<a href="javascript:void(0);" class="to-the-cart"></a>
+			</div>
+		</div>
+		<div class="col-xs-2">
+			<div class="item">
+				<div class="image" style="background-image: url('images/tovar-1.png');"></div>
+				<a href="product.html">
+					<div class="title">Инициатик - средства против первых морщин</div>
+					<div class="price">
+						<div>3593.37 <span>руб</span></div>
+					</div>
+				</a>
+				<a href="javascript:void(0);" class="to-the-cart"></a>
+			</div>
+		</div>
+		<div class="col-xs-2">
+			<div class="item">
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
+				<a href="product.html">
+					<div class="title">Инициатик - средства против первых морщин</div>
+					<div class="price">
+						<div>3593.37 <span>руб</span></div>
+					</div>
+				</a>
+				<a href="javascript:void(0);" class="to-the-cart"></a>
+			</div>
+		</div>
+		<div class="col-xs-2">
+			<div class="item">
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
+				<a href="product.html">
+					<div class="title">Инициатик - средства против первых морщин</div>
+					<div class="price">
+						<div>3593.37 <span>руб</span></div>
+					</div>
+				</a>
+				<a href="javascript:void(0);" class="to-the-cart"></a>
+			</div>
+		</div>
+		<div class="col-xs-2">
+			<div class="item">
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
+				<a href="product.html">
+					<div class="title">Инициатик - средства против первых морщин</div>
+					<div class="price">
+						<div>3593.37 <span>руб</span></div>
+					</div>
+				</a>
+				<a href="javascript:void(0);" class="to-the-cart"></a>
+			</div>
+		</div>
+		<div class="col-xs-2">
+			<div class="item">
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
+				<a href="product.html">
+					<div class="title">Инициатик - средства против первых морщин</div>
+					<div class="price">
+						<div>3593.37 <span>руб</span></div>
+					</div>
+				</a>
+				<a href="javascript:void(0);" class="to-the-cart"></a>
+			</div>
+		</div>
 	</div>
 </div>
 <!-- footer -->
