--- a/www/header+footer.html
+++ b/www/header+footer.html
@@ -43,7 +43,7 @@
 			<div class="header-search-col">
 				<div class="header-phones">8(4212)40-82-02, 8-924-21-1118</div>
 				<form action="" method="POST" class="header-search animated-placeholder">
-					<input type="text" name="header-seach" id="input-search" placeholder="Поиск..." required />
+					<input class="animated-placeholder" type="text" name="header-seach" id="input-search" placeholder="Поиск..." required />
 					<label for="input-search"></label>
 					<input type="submit" value="" />
 				</form>
